# Computational_math

./: .gitignore  README.md  plotter.ipynb
Lab_1/: CMakeLists.txt  plotter.ipynb  plotter.py
Lab_1/include/: solver.h
Lab_1/src/: main.cpp  shoot.cpp  solver.cpp  solver.h  thomas.cpp
Lab_2/: CMakeLists.txt  plotter.ipynb  plotter_parallel.ipynb
Lab_2/include/: convection_diffusion_problem.h  schemes.h  solver.h
Lab_2/src/: convection_diffusion_problem.cpp  main.cpp  schemes.cpp  solver.cpp
Lab_3/: CMakeLists.txt  plotter.ipynb
Lab_3/include/: problem.h  progress_bar.h
Lab_3/src/: main.cpp  problem.cpp  problem_solve.cpp  progress_bar.cpp
Shallow_water/: .gitignore  CMakeLists.txt  aboba.py
Shallow_water/include/: calc_mesh.h  flat_solver.tpp  problems.h  progress_bar.h  solver.h  solver.tpp  spherical_solver.tpp
Shallow_water/src/: calc_mesh.cpp  main.cpp  problems.cpp  progress_bar.cpp  solver.cpp
